tests/ui/fn_decl_in_parentheses.rs
use metamatch::unquote;
fn main() {
    unquote! {
        (fn foo() {}) + 3
    }
}
